--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
     <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+    <reactor-spring.version>1.0.1.RELEASE</reactor-spring.version>
   </properties>
 
   <parent>
@@ -26,7 +27,7 @@
   <dependencies>
 	  <dependency>
 	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-web</artifactId>
+	    <artifactId>spring-boot-starter-webflux</artifactId>
 	  </dependency>
 	
 	  <dependency>
@@ -40,5 +41,11 @@
 	    <artifactId>spring-boot-starter-test</artifactId>
 	    <scope>test</scope>
 	  </dependency>
+
+    <dependency>
+      <groupId>org.projectreactor</groupId>
+      <artifactId>reactor-spring</artifactId>
+      <version>${reactor-spring.version}</version>
+    </dependency>
   </dependencies>
 </project>
