consumir de eventos kafka

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
     <start-class>test.Application</start-class>
     <reactor-spring.version>1.0.1.RELEASE</reactor-spring.version>
+    <reactor-kafka.version>1.0.1.RELEASE</reactor-kafka.version>
   </properties>
 
   <parent>
@@ -45,6 +46,11 @@
       <groupId>org.projectreactor</groupId>
       <artifactId>reactor-spring</artifactId>
       <version>${reactor-spring.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>io.projectreactor.kafka</groupId>
+      <artifactId>reactor-kafka</artifactId>
     </dependency>
   </dependencies>
 
